Drawing the ball on the canvas

--- a/index.html
+++ b/index.html
@@ -18,10 +18,26 @@
 </head>
 <body>
 <canvas id="myCanvas" width="480" height="320"></canvas>
-<script>
-var canvas = document.querySelector('#myCanvas');
-var ctx = canvas.getContext('2d');
 
+<script>
+var canvas = document.querySelector('#myCanvas'),
+    ctx = canvas.getContext('2d'),
+    canvasWidth = canvas.width,
+    canvasHeight = canvas.height,
+    x = canvasWidth / 2,
+    y = canvasHeight - 30,
+    dx = 2,
+    dy = -2;
+
+function drawBall() {
+    ctx.beginPath();
+    ctx.arc(x, y, 10, 0, Math.PI*2);
+    ctx.fillStyle = "#0095DD";
+    ctx.fill();
+    ctx.closePath();
+}
+
+drawBall();
 </script>
 </body>
 </html>
