--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@ function drawBall() {
     ctx.closePath();
 }
 
-drawBall();
+function draw() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    drawBall();
+    x += dx;
+    y += dy;
+}
+
+setInterval(draw, 10);
 </script>
 </body>
 </html>
