--- a/index.html
+++ b/index.html
@@ -73,12 +73,26 @@
         for (var c = 0; c < brickColumnCount; c++) {
             bricks[c] = [];
             for (var r = 0; r < brickRowCount; r++) {
-                bricks[c][r] = {};
-                var brickX = (c * (brickWidth + brickPadding)) + brickOffsetLeft;
-                var brickY = (r * (brickHeight + brickPadding)) + brickOffsetTop;
-                bricks[c][r]['brickPosX'] = brickX;
-                bricks[c][r]['brickPosY'] = brickY;
-                drawBricks(brickX, brickY);
+                bricks[c][r] = {brickPosX: 0, brickPosY: 0, status: 1};
+            }
+        }
+    }
+
+    function createBricksOnCanvas() {
+        for (var c = 0; c < brickColumnCount; c++) {
+            for (var r = 0; r < brickRowCount; r++) {
+                if (bricks[c][r].status === 1) {
+                    var brickX = (c * (brickWidth + brickPadding)) + brickOffsetLeft;
+                    var brickY = (r * (brickHeight + brickPadding)) + brickOffsetTop;
+                    bricks[c][r].brickPosX = brickX;
+                    bricks[c][r].brickPosY = brickY;
+                    drawBricks(brickX, brickY);
+                    ctx.beginPath();
+                    ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                    ctx.fillStyle = "#0095DD";
+                    ctx.fill();
+                    ctx.closePath();
+                }
             }
         }
     }
@@ -87,9 +101,12 @@
         for (var c = 0; c < brickColumnCount; c++) {
             for (var r = 0; r < brickRowCount; r++) {
                 var b = bricks[c][r];
-                if (ballCenterPosX > b.brickPosX && ballCenterPosX < b.brickPosX + brickWidth &&
-                    ballCenterPosY > b.brickPosY && ballCenterPosY < b.brickPosY + brickHeight) {
-                    dy = -dy;
+                if (b.status === 1) {
+                    if (ballCenterPosX > b.brickPosX && ballCenterPosX < b.brickPosX + brickWidth &&
+                        ballCenterPosY > b.brickPosY && ballCenterPosY < b.brickPosY + brickHeight) {
+                        dy = -dy;
+                        b.status = 0;
+                    }
                 }
             }
         }
@@ -133,7 +150,7 @@
 
     function draw() {
         ctx.clearRect(0, 0, canvasWidth, canvasHeight);
-        createBricks();
+        createBricksOnCanvas();
         drawBall();
         bounceBallOffWalls();
         drawPaddle();
@@ -161,7 +178,7 @@
         }
     }
 
-
+    createBricks();
     document.addEventListener("keydown", keyDownHandler);
     document.addEventListener("keyup", keyUpHandler);
     setInterval(draw, 10);
